Spacing Fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,6 @@
 
 body, html {
   width: 100%;
-  height: 100%;
   font-family: 'Playfair Display', serif;
   font-weight: 200;
   font-size: 18px;
